kdebase-workspace (4:4.4.5-9) UNRELEASED; urgency=low

  * Add ftbfs_remove_notify.diff to avoid FTBFS with Qt 4.7 (Closes: #618073)
  * Build depend on libqtwebkit-dev.

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Thu, 21 Apr 2011 18:43:08 +0200

kdebase-workspace (4:4.4.5-8) unstable; urgency=high

  * Backport 33_backport_krunner_crash_fix_threading.diff patch from 4.5.0 to
    fix random but common krunner crashes. (Closes: #607974)
  * Urgency=high, might get to squeeze.

 -- Modestas Vainius <modax@debian.org>  Thu, 20 Jan 2011 01:04:32 +0200

kdebase-workspace (4:4.4.5-7) unstable; urgency=high

  * Replace Conflicts against kwin with Breaks in kde-window-manager. Also
    version them at (<< 4:4).
  * Remove Replaces/Conflicts on kwin (>= 4:4.0.1-1) from libkdecorations4 and
    libkwineffects1a packages.
  * Urgency=high, important for squeeze release.

 -- Modestas Vainius <modax@debian.org>  Thu, 13 Jan 2011 21:50:34 +0200

kdebase-workspace (4:4.4.5-6) unstable; urgency=medium

  [ Pino Toscano ]
  * Move the solid servicetypes from kdebase-workspace-bin.install.linux to
    kdebase-workspace-bin.install. (Closes: #608541)

  [ Modestas Vainius ]
  * Document a workaround for the "dark taskbar" bug in README.Debian. The real
    fix is in KDE SC 4.5 or later. However, regardless, I think this change
    closes: #564941.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 02 Jan 2011 01:48:18 +0200

kdebase-workspace (4:4.4.5-5) unstable; urgency=medium

  [ Modestas Vainius ]
  * Add patch 31_kdm_vt_switching_on_kfreebsd.diff which implements VT
    switching and status detection support for KDM on kFreeBSD. This should
    fix an issue with KDM hijacking VT2 on bootup. (Closes: #586540)
  * Fix ksmserver crash on logout. It's 100% reproducible on kfreebsd-amd64.
  * Make kdebase-workspace-bin Replace and Break kdesktop. (Closes: #605135)
  * Set urgency=medium due to multiple RC bug fixes.

  [ Didier Raboud ]