@@ -22,3 +22,4 @@
 97_fix_target_link_libraries.diff
 99_solid_network_use_ntrack.diff
 ftbfs_remove_notify.diff
+initialize_variables_crashfix.diff
